vpc.tf
#Create VPC

resource "aws_vpc" "bullfrig" {
  cidr_block       = "10.0.0.0/16"
  instance_tenancy = "default"

  tags = {
    Name = "Bullfrig"
  }
}
